JDIC removal and replacement by JRE 1.6 features